--- a/notebook/Banking-risk-analysis.ipynb
+++ b/notebook/Banking-risk-analysis.ipynb
@@ -8,16 +8,11 @@
     "<div align=\"center\">\n",
     "  <img src=\"growth-logo.png\" alt=\"Banking-Growth\" width=\"700\" style=\"border: 1px solid #ccc; border-radius:       10px; padding: 5px;\">\n",
     "  <div style=\"margin-top: 10px; font-weight: bold; font-size: 16px; color: #444;\">\n",
-    "      <h3>Banking-risk-analysis</h3>\n",
-    "  </div>\n",
+    "      <h3><em>Comprehensive Banking Portfolio & Risk Analysiss</em></h3>\n",
     "</div>\n",
-    "<div style=\"font-family: 'Times New Roman', Times, serif; font-size: 16px; text-align: center;\">\n",
-    "    <h2><Comprehensive Banking Portfolio & Risk Analysis</h2>\n",
-    "        \n",
-    "<div>\n",
-    "    <p>This analysis explores the banking customer dataset to uncover key patterns in account holdings, loan portfolios, income profiles, and transactional behavior. By integrating both financial and demographic variables, we examine customer engagement, lending trends, and risk exposure across different segments. The insights aim to support data-driven decision-making for improving product strategies, managing portfolio risk, and enhancing overall banking performance</p>\n",
     "</div>\n",
-    "\n"
+    "\n",
+    "    This analysis explores the banking customer dataset to uncover key patterns in account holdings, loan portfolios, income profiles, and transactional behavior. By integrating both financial and demographic variables, we examine customer engagement, lending trends, and risk exposure across different segments. The insights aim to support data-driven decision-making for improving product strategies, managing portfolio risk, and enhancing overall banking performance"
    ]
   },
   {
