--- a/notebook/Banking-risk-analysis.ipynb
+++ b/notebook/Banking-risk-analysis.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "66cea775-2637-495e-a98b-94e105b94342",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns \n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
